# heartmonitor

./: .gitignore  CMakeLists.txt  README.md  qml.qrc  resources.qrc
qml/: EcgGraph.qml  ecggraph.qml  main.qml  qmldir
src/: arrhythmiadetector.cpp  arrhythmiadetector.h  bluetoothmanager.cpp  bluetoothmanager.h  ecgdatamodel.cpp  ecgdatamodel.h  hmcontroller.cpp  hmcontroller.h  main.cpp
